# kubator

./: .clangd  .gitignore  .neocmake.toml  CMakeLists.txt  README.md  justfile  main_pico.cpp  package.json
code/inc/: easy_math.h
code/src/: easy_math.cpp
test/inc/: common.h  fixture_tests.h  parametric_tests.h
test/src/: failing_tests.cpp  fixture_tests.cpp  parametric_tests.cpp  simple_tests.cpp
